welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	
}
def faireV(d: Color) {
	marque(d);avance();gauche();avance();marque(d);recule();droite();avance();marque(d);
	def marque(c: Color) {setCouleurBrosse(c);baisseBrosse();leveBrosse();}
}
faireV(red);